--- a/style.css
+++ b/style.css
@@ -1,98 +1,70 @@
-body {
-    background-color: black;
-    margin-top: 100px;
-    margin: 0;
-}
-      .til-venstre{
-        display: block;
-      }
+body 
 
-.andini-med-kanin {
-    z-index: -1;
+   {background-color: black;
+    margin-top: 100px;
+    margin: 0;}
+.div3
+{
+display: flex;
+flex-direction: row;
+justify-content: flex-start;
+align-items: end;}
+
+
+h1
+{z-index: 2;
+color: white;
+display: flex;
+flex-direction: row;
+justify-content: center;
+text-shadow: 5px 2px blue;
+font-size: 270%;}
+
+.andini-med-kanin 
+   {z-index: -1;
     height: 200px;
     width: auto;
-    top: -150px;
-    position: relative;
-    left: 40px;
-    border-radius: 50%;
-}
+    border-radius: 50%;}
+
 
 .AndersDue
-
-{
-
-position: relative;
-left: 20px;
-z-index: -3;
+{z-index: -3;}
 
 
-}
-.test {
+.test {position: relative;
+       font-size: 200px;
+       transform: rotate(-3deg);}
 
-    position: relative;
-    left: 500px;
-    top: -430px;
-    font-size: 200px;
-    transform: rotate(-3deg);
-    }
-.andini-med-tørkle-i-honden {
-    z-index: -2;
-    height: 557px;
-    top:  10px; 
-    position: relative;
-    transform: rotate(5deg);
-   left: 30px;
-}
+
+.andini-med-tørkle-i-honden
+    {z-index: -2;
+     height: 457px;
+     transform: rotate(5deg);}
+
 
 .AndiniShow2-jpg
+{z-index: -1;
+ height: 457px;
+ width: auto;
+transform: rotate(-5deg);}
 
-{
-    z-index: -1;
-    height: 457px;   
-    width: auto;
-    position: relative;
-    left: 30px;
-    top: -10px;
-    transform: rotate(-5deg);
-    margin-top: 40px
-}
 .fixed
 
-{
-
-position: fixed;
-
+{position: fixed;
+text-shadow: 5px 2px blue;
 top: 30px;
-}
-h1 {
-   position: relative;
-    z-index: 2;
-    color: white;
-    text-shadow: 5px 2px blue;
-    top: 70px;
-    font-size: 570%;
-    left: 450px;
-
-}
-
-.hvor-optrer-jeg
-
-{
+z-index: 2;}
 
 
 
-}
-p {
-    color: white;
+
+p 
+   {color: white;
     text-shadow: 5px 2px blue;
     line-height: 50px;
     font-size: 20px;
-    left: 50px;
-    top: 50px; /* Dette overskriver den forrige margin-top; og er unødvendig */
     position: relative;
-    justify-content: center;
-    
-}
+    justify-content: center;}
 
 
 
@@ -100,70 +72,50 @@ p {
 @media only screen and (max-width: 900px) {
     * { 
     }
+
+
     .AndiniShow2-jpg
-    { z-index: -2;
-        height: 800px;   
+       {z-index: -2;
+        height: 300px;   
         width: auto;
-        position: relative;
-        left: 50px;
-        top: -600px;
         transform: rotate(0deg);
         margin-top: 40%}
         
-        .AndersDue
 
-        {
-        height: 500px;   
-        width: auto;
-        position: relative;
-        left: 0px;
-        top: -50px;
-        z-index: -3;
-        
-        
-        }
-        .test {
+    .AndersDue
+        {height: 400px;   
+         width: auto;
+         z-index: -3;}
 
-            position: relative;
-            left: 450px;
-            top: -430px;
-            font-size: 150px;
-            transform: rotate(-3deg);
-            }
-.andini-med-tørkle-i-honden
-    { z-index: -2;
-        height: 500px;   
+
+    .test
+        {font-size: 150px;
+         transform: rotate(-3deg);}
+
+
+    .andini-med-tørkle-i-honden
+       {z-index: -2;
+        height: 300px;   
         width: auto;
-        position: relative;
-        left: 500px;
-        top: -650px;
         transform: rotate(5deg);
         border-radius: 15%;
-        margin-top: 40%
-    }
+        margin-top: 40%}
+
+
     .andini-med-kanin
-    {
-
-position: relative;
-top: -20px;
-    }
+        {height: 50px;
+        top: -20px;}
 
 
+    h1 
+       {font-size: 40px;
+        text-shadow: 5px 2px blue;
+        color: white;
+        line-height: 50px}
 
 
-    h1
-
-    { font-size: 70px;
-        position: relative;
-        left:400px;
-        top: 90px;
-    }
-p {
-    color: white;
-    text-shadow: 5px 2px blue;
-    line-height: 50px;
-    left: 50px;
-    font-size: 20px;
-    top: 50px; /* Dette overskriver den forrige margin-top; og er unødvendig */
-    position: relative;
-    justify-content: center;}}
+    p 
+        {color: white;
+        font-size: 20px;
+        text-shadow: 5px 2px blue;
+        line-height: 50px;}}
