--- a/style.css
+++ b/style.css
@@ -84,10 +84,9 @@ p
         .fixed
 
         {position: fixed;
-        text-shadow: 5px 2px none;
+        text-shadow: 5px 2px blue;
         top: 30px;
         z-index: 2;}
-
     .AndersDue
         {height: 400px;   
          width: auto;
